	  as it'll be blanked out in do_replace().  Also, consolidate
	  the cases for blank and new search strings, as they now differ
	  only in which string they pass to regexp_init(). (DLR)
  replace_abort()
	- Remove unnecessary update of placewewant. (DLR)
  do_replace()
	- Blank out last_replace properly again just before displaying
	  the "Replace" prompt. (DLR, found by Mike Frysinger)
- configure.ac:
	- Since we only use vsnprintf() now, remove the tests for
	  snprintf(). (DLR)
- doc/faq.html:
	- Update section 4.10 to mention that pasting from the X
	  clipboard via the middle mouse button also works when the
	  Shift key is used. (DLR)
- doc/nanorc.sample:
	- Add regexes for Bourne shell scripts. (Mike Frysinger, minor
	  tweaks by DLR)

GNU nano 1.3.8 - 2005.06.30
- General:
	- Miscellaneous comment fixes. (DLR)
	- Various #include fixes.  Since proto.h includes nano.h, only
	  include the former in source files.  Also add an #include
	  guard to proto.h, and make the config.h #include in nano.h
	  match the config.h #includes everywhere else. (DLR)
	- Change all hardcoded instances of 128 bytes to MAX_BUF_SIZE,
	  and #define MAX_BUF_SIZE as 128 in nano.h. (DLR)
	- Display the key to go to the previous strings in the
	  search/replace history as "^P" instead of "Up".  This makes
	  mouse clicks work properly on it.  Changes to shortcut_init(),
	  help_init(), nanogetstr(), and do_statusbar_input(). (DLR)
	- Update the Free Software Foundation's mailing address in
	  various comments. (DLR)
	- Add the ability to open a file on a specified column as well
	  as a specified line, by allowing an argument of the form
	  +LINE,COLUMN.  New function parse_line_column(); changes to
	  shortcut_init(), main(), do_gotoline() (renamed
	  do_gotolinecolumn()), do_gotoline_void() (renamed
	  do_gotolinecolumn_void()), nano.1, and nano.texi. (DLR,
	  suggested by PFTank)
	- Overhaul the history code to work more consistently, and clean